--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.6.7",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.27.1",
+    "react-hot-toast": "^2.2.0",
+    "react-markdown": "^8.0.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.179",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0"
   }
